--- a/index.html
+++ b/index.html
@@ -20,12 +20,20 @@
                     <ul class="nav__links">
                         <li class="nav__link">
                             <a href="#">About</a>
-                            <a href="#">Blog</a>
-                            <a href="#">Pricing</a>
-                            <a href="#">Contact Us</a>                               
-                            <a href="#" class="nav__link--login">Login</a>
-                            <button class="btn__sign">Sign Up</button>
                         </li>
+                        <li class="nav__link">
+                            <a href="#">Blog</a>
+                        </li>
+                        <li class="nav__link">
+                            <a href="#">Pricing</a>
+                        </li>
+                        <li class="nav__link">
+                            <a href="#">Contact Us</a>                         
+                        </li>
+                        <li class="nav__link">
+                            <a href="#" class="nav__link--login">Login</a>
+                        </li>
+                        <button class="btn__sign">Sign Up</button>
                     </ul>
                 </div>
             </div>
