--- a/index.html
+++ b/index.html
@@ -33,25 +33,30 @@
                         <li class="nav__link">
                             <a href="#" class="nav__link--login">Login</a>
                         </li>
-                        <button class="btn__sign">Sign Up</button>
+                        <button class="nav__sign">Sign Up</button>
                     </ul>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="templates">
-                    <h1>Beautiful React Templates <span class="purple">for you</span></h1>
-                    <p>Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components</p>
-                    <form action="">
-                        <label for="">Email</label>
-                        <input type="text" placeholder="Your E-mail Address">
-                    </form>
-                    <button class="btn__sign">Get Started</button>
-                    <img src="./assets/logos.png" class="logos" alt="">                
-                    <img src="./assets/header.svg" class="header__logo" alt="">
+        </div>
+        <header>
+            <div class="container">
+                <div class="row">
+                    <div class="header__description">
+                        <h1>Beautiful React Templates <span class="purple">for you</span></h1>
+                        <p class="header__description--p">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components</p>
+                        <div class="header__email">
+                            <input class="header__email--input" type="text" placeholder="Your E-mail Address">
+                            <button class="btn__sign">Get Started</button>
+                        </div>
+                        <p class="header__customers">OUR TRUSTED CUSTOMERS</p>
+                        <img src="./assets/logos.png" class="customer__logos" alt="">  
+                    </div>
+                    <div class="header__img">              
+                        <img src="./assets/header.svg" class="header__logo" alt="">
+                    </div>
                 </div>
             </div>
-        </div>
+    </header>
     </section>
     
 </body>
