--- a/index.html
+++ b/index.html
@@ -58,6 +58,87 @@
             </div>
     </header>
     </section>
+    <main>
+        <section id="features">
+            <div class="container">
+                <div class="row">
+                    <div class="features__title">
+                        <Span class="purple feature">FEATURES</Span>
+                        <h1>We have Amazing <span class="purple">Service</span></h1>
+                        <p class="features__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae iste ipsa hic non pariatur, vitae, earum molestiae facilis animi consequatur esse. Esse neque eos reprehenderit molestias doloribus nostrum libero labore.</p>
+                    </div>
+                    <div class="services">
+                        <div class="service">
+                            <div class="service__container">
+                                <figure class="service__img--wrapper">
+                                    <img src="./assets/shield-icon.svg" alt="">
+                                </figure>
+                                <div class="serive__para">
+                                    <h3 class="service__title">Secure</h3>
+                                    <p class="service__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>  
+                                </div>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div class="service__container">
+                                <figure class="service__img--wrapper">
+                                    <img src="./assets/support-icon.svg" alt="">
+                                </figure>
+                                <div class="serive__para">
+                                    <h3 class="service__title">Secure</h3>
+                                    <p class="service__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>  
+                                </div>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div class="service__container">
+                                <figure class="service__img--wrapper">
+                                    <img src="./assets/customize.svg" alt="">
+                                </figure>
+                                <div class="serive__para">
+                                    <h3 class="service__title">Secure</h3>
+                                    <p class="service__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>  
+                                </div>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div class="service__container">
+                                <figure class="service__img--wrapper">
+                                    <img src="./assets/arrows.svg" alt="">
+                                </figure>
+                                <div class="serive__para">
+                                    <h3 class="service__title">Secure</h3>
+                                    <p class="service__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>  
+                                </div>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div class="service__container">
+                                <figure class="service__img--wrapper">
+                                    <img src="./assets/light-bolt.svg" alt="">
+                                </figure>
+                                <div class="serive__para">
+                                    <h3 class="service__title">Secure</h3>
+                                    <p class="service__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>  
+                                </div>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div class="service__container">
+                                <figure class="service__img--wrapper">
+                                    <img src="./assets/simple-icon.svg" alt="">
+                                </figure>
+                                <div class="serive__para">
+                                    <h3 class="service__title">Secure</h3>
+                                    <p class="service__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>  
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>   
+        </section>
+    </main>
     
 </body>
 </html>
