--- a/index.html
+++ b/index.html
@@ -62,75 +62,75 @@
         <section id="features">
             <div class="container">
                 <div class="row">
-                    <div class="features__title">
+                    <div class="features">
                         <Span class="purple feature">FEATURES</Span>
-                        <h1>We have Amazing <span class="purple">Service</span></h1>
+                        <h1 class="feature__service">We have Amazing <span class="purple">Service</span></h1>
                         <p class="features__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae iste ipsa hic non pariatur, vitae, earum molestiae facilis animi consequatur esse. Esse neque eos reprehenderit molestias doloribus nostrum libero labore.</p>
                     </div>
                     <div class="services">
                         <div class="service">
                             <div class="service__container">
                                 <figure class="service__img--wrapper">
-                                    <img src="./assets/shield-icon.svg" alt="">
+                                    <img class="service__img" src="./assets/shield-icon.svg" alt="">
                                 </figure>
-                                <div class="serive__para">
+                                <div class="service__para--wrapper">
                                     <h3 class="service__title">Secure</h3>
-                                    <p class="service__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>  
+                                    <p class="service__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim repellat dolore perspiciatis similique consequuntur facere delectus voluptatem sed voluptate blanditiis.</p>  
                                 </div>
                             </div>
                         </div>
                         <div class="service">
                             <div class="service__container">
                                 <figure class="service__img--wrapper">
-                                    <img src="./assets/support-icon.svg" alt="">
+                                    <img class="service__img" src="./assets/support-icon.svg" alt="">
                                 </figure>
-                                <div class="serive__para">
-                                    <h3 class="service__title">Secure</h3>
-                                    <p class="service__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>  
+                                <div class="service__para--wrapper">
+                                    <h3 class="service__title">24/7 Support</h3>
+                                    <p class="service__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti provident vel quidem tempore numquam soluta repellat, sit ipsa dolorum! Repellendus?</p>  
                                 </div>
                             </div>
                         </div>
                         <div class="service">
                             <div class="service__container">
                                 <figure class="service__img--wrapper">
-                                    <img src="./assets/customize.svg" alt="">
+                                    <img class="service__img" src="./assets/customize.svg" alt="">
                                 </figure>
-                                <div class="serive__para">
-                                    <h3 class="service__title">Secure</h3>
-                                    <p class="service__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>  
+                                <div class="service__para--wrapper">
+                                    <h3 class="service__title">Customizable</h3>
+                                    <p class="service__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse obcaecati molestiae aliquid ex nesciunt voluptatibus assumenda excepturi animi velit quod.</p>  
                                 </div>
                             </div>
                         </div>
                         <div class="service">
                             <div class="service__container">
                                 <figure class="service__img--wrapper">
-                                    <img src="./assets/arrows.svg" alt="">
+                                    <img class="service__img" src="./assets/arrows.svg" alt="">
                                 </figure>
-                                <div class="serive__para">
-                                    <h3 class="service__title">Secure</h3>
-                                    <p class="service__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>  
+                                <div class="service__para--wrapper">
+                                    <h3 class="service__title">Reliable</h3>
+                                    <p class="service__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti harum expedita quisquam dolorem error quia est impedit velit ullam numquam!</p>  
                                 </div>
                             </div>
                         </div>
                         <div class="service">
                             <div class="service__container">
                                 <figure class="service__img--wrapper">
-                                    <img src="./assets/light-bolt.svg" alt="">
+                                    <img class="service__img" src="./assets/light-bolt.svg" alt="">
                                 </figure>
-                                <div class="serive__para">
-                                    <h3 class="service__title">Secure</h3>
-                                    <p class="service__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>  
+                                <div class="service__para--wrapper">
+                                    <h3 class="service__title">Fast</h3>
+                                    <p class="service__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo enim laboriosam modi hic tenetur ipsa voluptas eaque similique animi sequi?</p>  
                                 </div>
                             </div>
                         </div>
                         <div class="service">
                             <div class="service__container">
                                 <figure class="service__img--wrapper">
-                                    <img src="./assets/simple-icon.svg" alt="">
+                                    <img class="service__img" src="./assets/simple-icon.svg" alt="">
                                 </figure>
-                                <div class="serive__para">
-                                    <h3 class="service__title">Secure</h3>
-                                    <p class="service__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>  
+                                <div class="service__para--wrapper">
+                                    <h3 class="service__title">Easy</h3>
+                                    <p class="service__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellendus, error vero aliquid amet commodi quaerat consectetur a esse quas.</p>  
                                 </div>
                             </div>
                         </div>
