--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                         <li class="nav__link">
                             <a href="#" class="nav__link--login">Login</a>
                         </li>
-                        <button class="nav__sign">Sign Up</button>
+                        <button class="nav__sign">
+                            <span class="sign__text">Sign Up</span>
+                        </button>
                     </ul>
                 </div>
             </div>
@@ -137,6 +139,13 @@
                     </div>
                 </div>
             </div>   
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    
+                </div>
+            </div>
         </section>
     </main>
     
