--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="features">
                         <Span class="purple feature">FEATURES</Span>
                         <h1 class="feature__service">We have Amazing <span class="purple">Service</span></h1>
-                        <p class="features__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae iste ipsa hic non pariatur, vitae, earum molestiae facilis animi consequatur esse. Esse neque eos reprehenderit molestias doloribus nostrum libero labore.</p>
+                        <p class="features__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis optio dolores cum dolorum at iure doloribus reiciendis qui corporis recusandae.</p>
                     </div>
                     <div class="services">
                         <div class="service">
@@ -143,7 +143,15 @@
         <section>
             <div class="container">
                 <div class="row">
-                    
+                    <div class="quality__description">
+                        <div class="quality__work purple">QUALITY WORK</div>
+                        <h1 class="quality__title">Designed & Developed by Professionals.</h1>
+                        <p class="quality__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem dolore illo deleniti voluptatem perspiciatis deserunt quibusdam ex et. Ipsam dolor consequatur itaque culpa. Libero magnam recusandae quod quidem dolorum soluta eaque quas pariatur obcaecati assumenda.</p>
+                        <button class="btn__sign">Learn more</button>
+                    </div>
+                    <figure class="quality__img--wrapper">
+                        <img src="./assets/hero-screenshot.png" alt="">
+                    </figure>
                 </div>
             </div>
         </section>
