--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </section>
         <section>
             <div class="container">
-                <div class="row">
+                <div class="row row--quality">
                     <div class="quality__description">
                         <div class="quality__work purple">QUALITY WORK</div>
                         <h1 class="quality__title">Designed & Developed by Professionals.</h1>
