learn more button

--- a/index.html
+++ b/index.html
@@ -140,18 +140,27 @@
                 </div>
             </div>   
         </section>
-        <section>
+        <section id="quality">
             <div class="container">
                 <div class="row row--quality">
                     <div class="quality__description">
                         <div class="quality__work purple">QUALITY WORK</div>
-                        <h1 class="quality__title">Designed & Developed by Professionals.</h1>
+                        <h1 class="quality__title">Designed & Developed by <span class="purple">Professionals.</span></h1>
                         <p class="quality__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem dolore illo deleniti voluptatem perspiciatis deserunt quibusdam ex et. Ipsam dolor consequatur itaque culpa. Libero magnam recusandae quod quidem dolorum soluta eaque quas pariatur obcaecati assumenda.</p>
-                        <button class="btn__sign">Learn more</button>
+                        <button class="btn__learn">
+                            <span class="btn__learn--text">Learn more</span>
+                        </button>
                     </div>
                     <figure class="quality__img--wrapper">
-                        <img src="./assets/hero-screenshot.png" alt="">
+                        <img class="quality__logo" src="./assets/hero-screenshot.png" alt="">
                     </figure>
+                </div>
+            </div>
+        </section>
+        <section id="steps">
+            <div class="container">
+                <div class="row">
+
                 </div>
             </div>
         </section>
