--- a/index.html
+++ b/index.html
@@ -159,8 +159,36 @@
         </section>
         <section id="steps">
             <div class="container">
-                <div class="row">
-
+                <div class="row row--steps">
+                    <div class="steps__img--wrapper">
+                        <img class="steps__logo" src="./assets/hero-screenshot-2.png" alt="">
+                    </div>
+                    <div class="steps__description">
+                        <div class="steps__title purple">STEPS</div>
+                        <h1 class="steps__header">Easy to <span class="purple">Get Started.</span></h1>
+                        <div class="steps__list">
+                            <div class="step">
+                                <div class="step__number">01</div>
+                                <div class="step__title--wrapper">
+                                    <h3 class="step__title">Register</h3>
+                                    <p class="step__para">Create an account with us using Google or Facebook.</p> 
+                                </div>
+                            </div>
+                            <div class="step">
+                                <div class="step__number">02</div>
+                                <div class="step__title--wrapper">
+                                    <h3 class="step__title">Download</h3>
+                                    <p class="step__para">Browse and Download the template that you like from the marketplace.</p> 
+                                </div>
+                            </div>
+                            <div class="step">
+                                <div class="step__number">03</div>
+                                <div class="step__title--wrapper">
+                                    <h3 class="step__title">Run</h3>
+                                    <p class="step__para">Follow the instructions to setup and customize the template to your needs.</p> 
+                                </div>
+                            </div>
+                        </div>
                 </div>
             </div>
         </section>
