--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="container">
                 <div class="row">
                     <div class="features">
-                        <Span class="purple feature">FEATURES</Span>
+                        <Span class="titles">FEATURES</Span>
                         <h1 class="feature__service">We have Amazing <span class="purple">Service</span></h1>
                         <p class="features__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis optio dolores cum dolorum at iure doloribus reiciendis qui corporis recusandae.</p>
                     </div>
@@ -144,11 +144,11 @@
             <div class="container">
                 <div class="row row--quality">
                     <div class="quality__description">
-                        <div class="quality__work purple">QUALITY WORK</div>
+                        <div class="titles">QUALITY WORK</div>
                         <h1 class="quality__title">Designed & Developed by <span class="purple">Professionals.</span></h1>
                         <p class="quality__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem dolore illo deleniti voluptatem perspiciatis deserunt quibusdam ex et. Ipsam dolor consequatur itaque culpa. Libero magnam recusandae quod quidem dolorum soluta eaque quas pariatur obcaecati assumenda.</p>
                         <button class="btn__learn">
-                            <span class="btn__learn--text">Learn more</span>
+                            <span class="btn__learn--text">Learn More</span>
                         </button>
                     </div>
                     <figure class="quality__img--wrapper">
@@ -164,7 +164,7 @@
                         <img class="steps__logo" src="./assets/hero-screenshot-2.png" alt="">
                     </div>
                     <div class="steps__description">
-                        <div class="steps__title purple">STEPS</div>
+                        <div class="titles">STEPS</div>
                         <h1 class="steps__header">Easy to <span class="purple">Get Started.</span></h1>
                         <div class="steps__list">
                             <div class="step">
@@ -192,7 +192,55 @@
                 </div>
             </div>
         </section>
+        <section id="values">
+            <div class="container">
+                <div class="row row--values">
+                    <div class="values">
+                        <div class="titles">VALUES</div>
+                        <h1 class="values__header">We Always Abide by Our <span class="purple">Principles.</span></h1>
+                        <p class="values__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <div class="values__list">
+                            <div class="value">
+                                <div class="value__title">
+                                    <figure class="value__img--wrapper1">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="value__img" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgba(39, 103, 73, 1)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" >
+                                            <line x1="12" y1="1" x2="12" y2="23"></line>
+                                            <path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path>
+                                        </svg>
+                                    </figure>
+                                    <h3 class="value__name">Affordable</h3>
+                                </div>
+                                <div class="value__para">
+                                    We promise to offer you the best rate we can - at par with the industry standard.
+                                </div>
+                            </div>
+                            <div class="value">
+                                <div class="value__title">
+                                    <figure class="value__img--wrapper2">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="value__img" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgba(155, 44, 44, 1)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                            <rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect>
+                                            <path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
+                                        </svg>
+                                    </figure>
+                                    <h3 class="value__name">Professionalism</h3>
+                                </div>
+                                <div class="value__para">
+                                    We assure you that our templates are designed and created by professional designers.
+                                </div>
+                            </div>
+                        </div>
+                        <button class="btn__learn btn__value">
+                            <span class="btn__learn--text">Learn More</span>
+                        </button>
+                    </div>
+                    <div class="values__img--wrapper">
+                        <img class="values__logo" src="./assets/prototype-illustration.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
 </html>
+
