--- a/index.html
+++ b/index.html
@@ -239,6 +239,77 @@
                 </div>
             </div>
         </section>
+        <section id="Pricing">
+            <div class="container">
+                <div class="row row--pricing">
+                    <div class="pricing__description">
+                        <div class="titles">PRICING</div>
+                        <h1 class="pricing__header">Reasonable & Flexible <span class="purple">Plans.</span></h1>
+                        <p class="pricing__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                            <br>eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="plans">
+                        <div class="plan">
+                            <div class="plan__header">
+                                <div class="plan__title1">PERSONAL</div>
+                                <div class="plan__price1">$17.99</div>
+                                <div class="plan__frecuency1">MONTHLY</div>
+                            </div>
+                            <div class="plan__body">
+                                <div class="plan__body--title1">For Individuals</div>
+                                <div class="plan__body--list1">
+                                    <li class="pricing__list">30 Templates</li>
+                                    <li class="pricing__list">7 Landing pages</li>
+                                    <li class="pricing__list">12 Internal Pages</li>
+                                    <li class="pricing__list">Basic Assistance</li>
+                                </div>
+                            </div>
+                                <div class="plan__footer">
+                                    <button class="Plan__button1">BUY NOW</button>
+                                </div>
+                        </div>
+                        <div class="plan plan2">
+                            <div class="plan__header">
+                                <div class="plan__title2">BUSINESS</div>
+                                <div class="plan__price2">$37.99</div>
+                                <div class="plan__frecuency2">MONTHLY</div>
+                            </div>
+                            <div class="plan__body">
+                                <div class="plan__body--title2">For Small Businesses</div>
+                                <div class="plan__body--list2">
+                                    <li class="pricing__list">60 Templates</li>
+                                    <li class="pricing__list">15 Landing pages</li>
+                                    <li class="pricing__list">22 Internal Pages</li>
+                                    <li class="pricing__list">Priority Assistance</li>
+                                </div>
+                            </div>
+                                <div class="plan__footer">
+                                    <button class="Plan__button2">BUY NOW</button>
+                                </div>
+                        </div>
+                        <div class="plan">
+                            <div class="plan__header">
+                                <div class="plan__title1">ENTERPRISE</div>
+                                <div class="plan__price1">$57.99</div>
+                                <div class="plan__frecuency1">MONTHLY</div>
+                            </div>
+                            <div class="plan__body">
+                                <div class="plan__body--title1">For Large Companies</div>
+                                <div class="plan__body--list1">
+                                    <li class="pricing__list">90 Templates</li>
+                                    <li class="pricing__list">27 Landing pages</li>
+                                    <li class="pricing__list">37 Internal Pages</li>
+                                    <li class="pricing__list">Personal  Assistance</li>
+                                </div>
+                            </div>
+                                <div class="plan__footer">
+                                    <button class="Plan__button3">BUY NOW</button>
+                                </div>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+        </section>
     </main>
     
 </body>
