--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                                 <div class="plan__price2">$37.99</div>
                                 <div class="plan__frecuency2">MONTHLY</div>
                             </div>
-                            <div class="plan__body">
+                            <div class="plan__body plan__body2">
                                 <div class="plan__body--title2">For Small Businesses</div>
                                 <div class="plan__body--list2">
                                     <li class="pricing__list">60 Templates</li>
@@ -284,7 +284,7 @@
                                 </div>
                             </div>
                                 <div class="plan__footer">
-                                    <button class="Plan__button2">BUY NOW</button>
+                                    <button class="Plan__button2 purple">BUY NOW</button>
                                 </div>
                         </div>
                         <div class="plan">
