border radius pricing

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         </div>
                         <div class="plan">
                             <div class="plan__header">
-                                <div class="plan__title1">ENTERPRISE</div>
+                                <div class="plan__title1 plan__title3">ENTERPRISE</div>
                                 <div class="plan__price1">$57.99</div>
                                 <div class="plan__frecuency1">MONTHLY</div>
                             </div>
