--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
                 <div class="nav__menu">
                     <ul class="nav__links">
                         <li class="nav__link">
-                            <a href="#">About</a>
+                            <a class="nav__a" href="#">About</a>
                         </li>
                         <li class="nav__link">
-                            <a href="#">Blog</a>
+                            <a class="nav__a" href="#">Blog</a>
                         </li>
                         <li class="nav__link">
-                            <a href="#">Pricing</a>
+                            <a class="nav__a" href="#">Pricing</a>
                         </li>
                         <li class="nav__link">
-                            <a href="#">Contact Us</a>                         
+                            <a class="nav__a" href="#">Contact Us</a>                         
                         </li>
                         <li class="nav__link">
-                            <a href="#" class="nav__link--login">Login</a>
+                            <a class="nav__a" href="#" class="nav__link--login">Login</a>
                         </li>
                         <button class="nav__sign">
                             <span class="sign__text">Sign Up</span>
