--- a/index.html
+++ b/index.html
@@ -310,6 +310,54 @@
                 </div> 
             </div>
         </section>
+        <section id="testimonaial">
+            <div class="container">
+                <div class="row row--testimonial">
+                    <div class="testimonial__img--wrapper">
+                        <img class="testimonial__logo" src="./assets/love-illustration.svg" alt="">
+                    </div>
+                    <div class="testimonial__description">
+                        <div class="titles">TESTIMONIALS</div>
+                        <div class="testimonial__header">
+                            Our Clients <span class="purple">Love Us.</span>
+                        </div>
+                        <p class="testimonial__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam.</p>
+                        <div class="testimonial">
+                            <div class="stars">
+                            ⭐⭐⭐⭐⭐
+                            </div>
+                            <div class="testimonial__title">Amazing User Experience</div>
+                            <div class="testimonial__section">
+                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+                            </div>
+                            <div class="testimonial__footer">
+                                <div class="testimonial__profile">
+                                    <div class="testimonial__pic--wrapper">
+                                        <img class="testimonial__pic" src="/assets/photo-1494790108377-be9c29b29330.avif" alt="">
+                                    </div>
+                                    <div class="testimonial__info">
+                                        <div class="testimonial__name">Charlotte Hale</div>
+                                        <div class="testimonial__details">Director, Delos Inc.</div>
+                                    </div>
+                                </div>
+                                <div class="testimonial__arrow--wrapper">
+                                    <div class="testimonial__arrows">
+                                        <svg class="testimonial__arrow" fill="none" stroke="rgb(100,21,255)" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" viewBox="0 0 24 24">
+                                        <path d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
+                                        </svg>
+                                    </div>
+                                    <div class="testimonial__arrows">
+                                        <svg class="testimonial__arrow" fill="none" stroke="rgb(100,21,255)" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" viewBox="0 0 24 24">
+                                        <path d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
