--- a/index.html
+++ b/index.html
@@ -341,16 +341,17 @@
                                     </div>
                                 </div>
                                 <div class="testimonial__arrow--wrapper">
-                                    <div class="testimonial__arrows">
+                                    <button class="testimonial__button">
                                         <svg class="testimonial__arrow" fill="none" stroke="rgb(100,21,255)" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" viewBox="0 0 24 24">
                                         <path d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
                                         </svg>
-                                    </div>
-                                    <div class="testimonial__arrows">
+                                    </button>
+                                    <div class="divider"></div>
+                                    <button class="testimonial__button">
                                         <svg class="testimonial__arrow" fill="none" stroke="rgb(100,21,255)" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" viewBox="0 0 24 24">
                                         <path d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
                                         </svg>
-                                    </div>
+                                    </button>
                                 </div>
                             </div>
                         </div>
