--- a/index.html
+++ b/index.html
@@ -359,6 +359,23 @@
                 </div>
             </div>
         </section>
+        <section id="start">
+            <div class="container">
+                <div class="row row--start">
+                    <div class="start__box">
+                        <div class="start__row">
+                            <div class="start__text">
+                                Developers all over the world are happily using Treact.
+                            </div>
+                            <div class="start__buttons">
+                                <button class="start__button">Get Started</button>
+                                <button class="start__button">Contactc Us</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
